--- a/index.html
+++ b/index.html
@@ -1234,11 +1234,11 @@
               class="hoverline">dennis0303stephens@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/dennis0303stephons" target="_blank"
+          <a aria-label="View Varad on GitHub" href="http://github.com/webtopcoder" target="_blank"
             data-position="top" data-tooltip="View Varad on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/dennis0303stephons" class="hoverline"
-              target="_blank">github.com/dennis0303stephons</a></a>
+              aria-label="Varad on Github" href="http://github.com/webtopcoder" class="hoverline"
+              target="_blank">github.com/webtopcoder</a></a>
         </p>
         <!-- <p>
           <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/deenisstephens" target="_blank"
