--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:title" content="Dennis Bhogayata | Software Developer" />
   <meta property="og:description" content="Software Developer" />
   <meta property="og:url" content="https://deenisstephens.github.io/" />
-  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:site_name" content="Dennis Bhogayata | Software Developer" />
   <meta property="article:publisher" content="https://deenisstephens.github.io/" />
   <meta property="og:image" content="https://deenisstephens.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
+  <meta name="twitter:site" content="@Dennis_bhogayata" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
-  <meta name="author" content="Varad Bhogayata" />
+  <meta name="twitter:url" content="https://twitter.com/Dennis_bhogayata" />
+  <meta name="author" content="Dennis Bhogayata" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png" />
@@ -151,10 +151,10 @@
         4. mdi-file-attachment
         5. mdi-file-folder-shared
         -->
-        <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
+        <!-- <a aria-label="Open Dennis's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://app.enhancv.com/share/a771c15f/?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic" target="_blank"
+        <a aria-label="Open Dennis's resume in a new tab" href="https://app.enhancv.com/share/a771c15f/?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -203,7 +203,7 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
+        <a aria-label="Open Dennis's Resume in a new tab"
           href="https://app.enhancv.com/share/a771c15f/?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
@@ -236,7 +236,7 @@
                 </button>
               </a> -->
 
-              <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
+              <!-- <a href="https://angel.co/u/Dennis_bhogayata" target="_blank">
                 <button class="icon-btn angellist">
                   <i class="fa fa-angellist"></i>
                 </button>
@@ -1217,33 +1217,33 @@
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Dennis" data-position="top" data-tooltip="Call Dennis"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+1 617 600 6391</a></a>
+              aria-label="Call Dennis">+1 617 600 6391</a></a>
         </p>
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Dennis" data-position="top" data-tooltip="Call Dennis"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-skype"></i><a
-              aria-label="Call Varad">live:.cid.db16316db75643de</a></a>
+              aria-label="Call Dennis">live:.cid.db16316db75643de</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:dennis0303stephons@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:dennis0303stephens@gmail.com"
+          <a aria-label="Email Dennis" href="mailto:dennis0303stephons@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Dennis" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Dennis" href="mailto:dennis0303stephens@gmail.com"
               class="hoverline">dennis0303stephens@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/webtopcoder" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Dennis on GitHub" href="http://github.com/webtopcoder" target="_blank"
+            data-position="top" data-tooltip="View Dennis on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/webtopcoder" class="hoverline"
+              aria-label="Dennis on Github" href="http://github.com/webtopcoder" class="hoverline"
               target="_blank">github.com/webtopcoder</a></a>
         </p>
         <!-- <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/deenisstephens" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Dennis on LinkedIn" href="http://linkedin.com/in/deenisstephens" target="_blank"
+            data-position="top" data-tooltip="View Dennis on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/deenisstephens"
+              class="fa fa-linkedin"></i><a aria-label="Dennis on LinkedIn" href="http://linkedin.com/in/deenisstephens"
               class="hoverline" target="_blank">linkedin.com/in/deenisstephens</a></a>
         </p> -->
       </div>
